# TermConnectFour

./: CMakeLists.txt  LICENSE  conanfile.py
src/: main.cpp
